fixing alignment styling between metadata and dataset

--- a/src/components/experiment-tracking/run-dataset/run-dataset.scss
+++ b/src/components/experiment-tracking/run-dataset/run-dataset.scss
@@ -38,7 +38,7 @@
 .details-dataset__name-header {
   display: block;
   flex-shrink: 0;
-  width: 375px;
+  width: 310px;
 }
 
 .details-dataset__value,
@@ -92,9 +92,11 @@
 }
 
 .details-dataset__tranistion-group-wrapper span {
-  margin-right: 10em;
-
   &:first-of-type {
     margin-right: 0;
+  }
+
+  &:nth-of-type(2) {
+    margin-right: 10em;
   }
 }
