--- a/src/components/experiment-tracking/run-metadata/animation.scss
+++ b/src/components/experiment-tracking/run-metadata/animation.scss
@@ -12,7 +12,7 @@ $first-run-animation-timing: 0.3s;
 .details-dataset__value-header--comparison-view,
 .details-dataset__value--comparison-view,
 .details-metadata__run--first-run-comparison-view {
-  transform: translateX(-40%);
+  transform: translateX(-30%);
   transition: transform $first-run-animation-timing ease-out;
 }
 // to transition the metadata and dataset panel to the left
@@ -31,7 +31,7 @@ $first-run-animation-timing: 0.3s;
 
 .details-metadata__labels-comparison-view .details-metadata__title {
   opacity: 0;
-  transform: translateX(-40%);
+  transform: translateX(-30%);
   transition: opacity 0.1s ease-in-out, transform 1s ease-in-out;
 }
 
